# C-SoftwareEngineering

./: README.md
1/: associative_array.d  chaining.d  hello.d  memory3.d
10/: DataStructure.txt  Singleton.d  command.d  dynamic_analysis.d  formatting.d  gdc_example.d  messagepassing.d  singletonExample.d  struct_template.d  struct_template.d.cg
11/gtkd/05/: dub.json
11/gtkd_tutorials/06/: dub.json  tutorial.md
11/gtkd_tutorials/07/: dub.json  tutorial.md
11/gui_scratch_sdl/: dub.json
11/gui_scratch_sdl/source/: .app.d.swp
11/one_window_gtk_sdl/source/: gui.d
11/sdl_gtk/source/: app.d  gui.d
12/: action.yml  local.yml
12/chat_packet/: server.d
12/one_window_gtk_sdl/source/: app.d  gui.d
13/multithreaded_chat/: client.d  server.d
14/example_of_globals_at_module_level/: app.d  gui.d
2/: class.cpp  functional_increment.d  interface.d  namespace.cpp  pointers2.d  procedural.cpp  static.d
2/OtherExamples/: abstract.cpp
2/SimpleProject/src/: main.cpp  window.cpp
2/screensaver/src/: main.cpp
2/simplescreensaver/include/: circle.hpp  window.h
2/simplescreensaver/src/: .main.cpp.swp  circle.cpp  main.cpp
3/: concrete.cpp  debugflag.d  formatting.d  functional_filter.d  gdb.d  gdb3.d  loop.d  printdebug.d  printdebug2.d  printdebug3.d  static.cpp  version.d
3/IntArray/: IntArray.cpp  prog
3/Section1/: IntArray.cpp
3/code_smell_exercise/: out.d  out_fix.d  out_fix2.d  raw_loops.d  raw_loops_fix.d  separate.d  separate_fix.d
3/d_code_smells/: aggregate_globals.d  globals.d  leaky.d  not_leaky.d  version.d
3/deep_and_shallow/: example2.cpp  prog
3/deep_vs_shallow_copy/: example2.cpp
3/design patterns/: adapter.cpp
3/programanalysis/: dynamic_analysis.d  input.d  optimize.d  unusedVariable.d
3/screensaver/include/: AdapterText.hpp  circle.hpp
4/: .operator_overload.d.swp  deepcopy.d  dup.d  iterator.d  semantics.d  shallow.d  static_member.d  struct_and_class.d  struct_copy2.d  struct_ctor.d  struct_dtor.d
4/cmakeexample/: .CMakeLists.txt.swp  CMakeLists.txt
4/cmakeexample/src/: main.cpp
5/: composition.d  gdb.cpp  operator_overload.d  struct_copy.d
5/project/: .gitignore
5/project_raii/: dub.json
6/: assertThrowable_example.d  assert_version.d  assertion.d  assertion2.d  catch_example1.cpp  conditional.d  cov.d  debug.d  enforce_example.d  exception.d  exception2.d  exception3.d  exception4.d  fault.d  funtioncontract.d  invariant.d  invariant2.d  isPalindromeBadExample.d  naive.d  nothrow.d  pure_example.d  staticassert.d  unit_test_block.d  unit_test_function.d  unittester.d
6/catchExample/: catch_example1.cpp
7/: getip.d
7/chat/: Packet.d  client.d  server.d
7/gameloop/: main.d  main_c.d  main_oop.d  main_oop_pfn.d
9/chat_packet/: server.d
9/multithreaded_chat/: client.d  server.d
c++_course_version/1/: 15_mem.cpp
c++_course_version/3/: creational.cpp  static.cpp
tutorials/: comparisonoperator.cpp
(+35 files in other folders)
